--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,11 @@
 
 	<dependencies>
 		<dependency>
+    			<groupId>xalan</groupId>
+    			<artifactId>xalan</artifactId>
+    			<version>2.7.2</version>
+		</dependency>
+		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.0.1</version>
